@@ -1,4 +1,5 @@
 0.7.2
+Added save history file menu to SaveHistory plugin.
 Smartened up plugin prefs dialog.
 Added 'very safe' mode, no plugins, themes, syntax highlighters loaded, no exit data written.
 Added 'safe' mode, all plugins disabled, no enable/disable data written.
